fix z-index issue

--- a/src/styles/MessageInput.scss
+++ b/src/styles/MessageInput.scss
@@ -9,7 +9,7 @@
 
   &-large {
     position: relative;
-    z-index: 0;
+    z-index: 1;
     width: 100%;
   }
 
